--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ParkingGo"
         tools:targetApi="31">
-        
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -29,21 +28,32 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity >
-        <activity android:name=".LoginActivity"  
-            android:windowSoftInputMode="stateVisible|adjustResize"
+        <activity
+            android:name=".RecoveryActivity"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ParkingGo.NoActionBar">
+            android:theme="@style/Theme.ParkingGo.NoActionBar"
+            android:windowSoftInputMode="adjustResize">
             <meta-data
                 android:name="android.app.lib_name"
-                android:value=""/>
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.ParkingGo.NoActionBar"
+            android:windowSoftInputMode="stateVisible|adjustResize">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
         </activity>
         <activity
             android:name=".RegisterActivity"
-            android:windowSoftInputMode="stateVisible|adjustResize"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ParkingGo.NoActionBar">
+            android:theme="@style/Theme.ParkingGo.NoActionBar"
+            android:windowSoftInputMode="stateVisible|adjustResize">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
